# V-EZ

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  index.html
Docs/: V-EZ.html
Docs/AsciiDoctor/: CommandBuffers.txt  GLSLGuide.txt  GenerateDocumentation.sh  Initialization.txt  Introduction.txt  Pipelines.txt  Queues.txt  RenderPasses.txt  ResourceCreation.txt  Samplers.txt  Synchronization.txt  UpdatingMemory.txt  V-EZ.html  V-EZ.txt  VertexInputFormats.txt
Include/: VEZ.h  VEZ_Loader.cpp  VEZ_Loader.h  VEZ_Platform.h  VEZ_ext.h
Lib/win64/: VEZ.lib
Lib/x86_64/: VEZ.lib
Libs/glfw/lib/osx64/: libglfw.3.3.dylib
Samples/: CMakeLists.txt
Samples/Common/: AppBase.cpp  AppBase.h  Model.cpp  Model.h
Samples/Data/Shaders/MipmapGeneration/: MipmapGeneration.frag  MipmapGeneration.vert
Samples/Data/Shaders/MultiWindow/: Simple.frag  Simple.vert
Samples/Data/Shaders/OcclusionCulling/: Occluder.frag  Occluder.vert  OcclusionScene.frag  OcclusionScene.vert  OcclusionTest.frag  OcclusionTest.geom  OcclusionTest.vert
Samples/Data/Shaders/PipelineReflection/: Reflection.comp
Samples/Data/Shaders/ShadowMapping/: DepthPass.vert  ScenePass.frag  ScenePass.vert
Samples/Data/Shaders/SimpleCompute/: SimpleCompute.comp  SimpleCompute.frag  SimpleCompute.vert
Samples/Data/Shaders/SimpleQuad/: SimpleQuad.frag  SimpleQuad.vert
Samples/Data/Shaders/SoftwareRasterization/: SoftwareRasterization.comp
Samples/Data/Shaders/Subpasses/: Subpass0.frag  Subpass1.frag  Subpass1.vert
Samples/MipmapGeneration/: CMakeLists.txt  MipmapGeneration.cpp  MipmapGeneration.h  main.cpp
Samples/MultiWindow/: CMakeLists.txt  MultiWindow.vcxproj  MultiWindow.vcxproj.filters  Window.cpp  Window.h  cmake_install.cmake  main.cpp
Samples/OcclusionCulling/: CMakeLists.txt  OcclusionCulling.cpp  OcclusionCulling.h  main.cpp
Samples/PipelineReflection/: CMakeLists.txt  PipelineReflection.cpp  PipelineReflection.h  main.cpp
Samples/ShadowMapping/: CMakeLists.txt  ShadowMapping.cpp  ShadowMapping.h  main.cpp
Samples/SimpleCompute/: CMakeLists.txt  SimpleCompute.cpp  SimpleCompute.h  main.cpp
Samples/SimpleQuad/: CMakeLists.txt  SimpleQuad.cpp  SimpleQuad.h  main.cpp
Samples/SoftwareRasterization/: CMakeLists.txt  SoftwareRasterization.cpp  SoftwareRasterization.h  main.cpp
Samples/Subpasses/: CMakeLists.txt  Subpasses.cpp  Subpasses.h  main.cpp
Samples/VulkanMemory/: CMakeLists.txt  VulkanMemory.cpp  VulkanMemory.h  main.cpp
Source/: CMakeLists.txt  VEZ.cpp  VEZ.def  VEZ.h  VEZ_ext.cpp  VEZ_ext.h
Source/Compiler/: GLSLCompiler.cpp  GLSLCompiler.h  ResourceLimits.cpp  ResourceLimits.h  SPIRVReflection.cpp  SPIRVReflection.h
Source/Core/: Buffer.cpp  Buffer.h  BufferView.cpp  BufferView.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  Device.cpp  Device.h  Fence.h  Framebuffer.cpp  Framebuffer.h  GraphicsState.cpp  GraphicsState.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  PipelineBarriers.cpp  PipelineBarriers.h  PipelineCache.cpp  PipelineCache.h  Queue.cpp  Queue.h  RenderPassCache.cpp  RenderPassCache.h  ResourceBindings.cpp  ResourceBindings.h  (+12 more)
Source/Utility/: Macros.h  MemoryStream.cpp  MemoryStream.h  ObjectLookup.cpp  ObjectLookup.h  SpinLock.h  ThreadPool.cpp  ThreadPool.h  VkHelpers.h
